# Nexus-Engine

./: .gitignore  CMakeLists.txt  CTestCustom.cmake.in  README.md  README_EN.md  README_PT.md  pytest.ini
.github/workflows/: ci.yml
backend/cpp/analytics/: metrics_calculator.cpp  monte_carlo_simulator.cpp  monte_carlo_simulator.h  performance_analyzer.cpp  risk_metrics.cpp
backend/cpp/core/: atomic_sequence.h  backtest_engine.cpp  event_pool.h  event_queue.h  event_system.h  exporter.h  hpc_utils.h  latency_tracker.cpp  real_time_config.h  thread_affinity.cpp  thread_affinity.h  wait_strategy.h
backend/cpp/data/: data_types.h  data_validator.h  database_manager.cpp
backend/cpp/execution/: execution_simulator.h  lock_free_order_book.cpp  price_level.h
backend/cpp/optimization/: genetic_algorithm.cpp  genetic_algorithm.h  grid_search.h  strategy_optimizer.h
backend/cpp/position/: position_manager.h  risk_manager.cpp
backend/cpp/strategies/: abstract_strategy.h  macd_strategy.h  rsi_strategy.h  signal_types.h  sma_strategy.cpp  technical_indicators.cpp
backend/python/: pyproject.toml  requirements.txt  setup.py
backend/python/config/: .env.example  __init__.py  settings.py
backend/python/src/: __init__.py
backend/python/src/application/: __init__.py
backend/python/src/application/services/: __init__.py  market_data_service.py  strategy_service.py  telemetry_service.py
backend/python/src/application/usecases/: __init__.py  fetch_market_data.py  live_trading.py  optimize_strategy.py  run_backtest.py
backend/python/src/domain/: __init__.py
backend/python/src/domain/entities/: __init__.py  backtest.py  position.py  strategy.py  trade.py
backend/python/src/domain/repositories/: __init__.py  market_data_repository.py  strategy_repository.py
backend/python/src/domain/value_objects/: __init__.py  price.py  symbol.py  time_range.py
backend/python/src/infrastructure/: __init__.py
backend/python/src/infrastructure/adapters/: __init__.py  alpha_vantage_adapter.py  cpp_engine_adapter.py  finnhub_adapter.py  fred_adapter.py  nasdaq_datalink_adapter.py
backend/python/src/infrastructure/database/: __init__.py  market_data_repository_impl.py  models.py  postgres_client.py  strategy_repository_impl.py
backend/python/src/infrastructure/database/migrations/: alembic.ini  env.py  script.py.mako
backend/python/src/infrastructure/database/migrations/versions/: 20251016_0000_initial_schema.py
backend/python/src/infrastructure/telemetry/: __init__.py  loki_logger.py  prometheus_metrics.py  tempo_tracer.py
backend/python/src/nexus_bindings/: CMakeLists.txt  __init__.py  analytics_bindings.cpp  core_bindings.cpp  execution_bindings.cpp  optimization_bindings.cpp  strategies_bindings.cpp
devops/docker/: .dockerignore  .env.example  Dockerfile.cpp  Dockerfile.python  docker-compose.yml
devops/observability/grafana/dashboards/: cpp_engine_performance.json  nexus_trading_metrics.json  system_metrics.json
devops/observability/grafana/provisioning/: dashboards.yml  datasources.yml
devops/observability/loki/: loki-config.yml
devops/observability/prometheus/: prometheus.yml
devops/observability/tempo/: tempo-config.yml
docs/: API.md  ARCHITECTURE.md  GUIDE.md  OBSERVABILITY.md
frontend/: requirements.txt
frontend/pyqt6/: nexus_frontend.spec
frontend/resources/styles/: dark_theme.qss
frontend/src/: __init__.py  main.py
frontend/src/application/: __init__.py
frontend/src/application/services/: __init__.py  backend_client.py  metrics_aggregator.py  prometheus_client.py
frontend/src/presentation/: __init__.py
frontend/src/presentation/viewmodels/: __init__.py  backtest_vm.py  dashboard_vm.py  live_trading_vm.py  observability_vm.py  strategy_vm.py
frontend/src/presentation/views/: __init__.py  backtest_view.py  dashboard_view.py  live_trading_view.py  main_window.py  observability_view.py  strategy_editor_view.py
frontend/src/presentation/widgets/: __init__.py
frontend/src/presentation/widgets/charts/: __init__.py  candlestick_chart.py  equity_curve_chart.py  live_metrics_dashboard.py  performance_metrics_widget.py
frontend/src/presentation/widgets/components/: __init__.py
frontend/src/utils/: __init__.py
scripts/: tests.ps1
scripts/data/: fetch_market_data.py  seed_database.py  validate_data.py
scripts/tests/: conftest.py  run_tests.bat  run_tests.sh
scripts/tests/cpp/: test_advanced_modules.cpp  test_analytics.cpp  test_integration.cpp  test_monte_carlo.cpp  test_position_manager.cpp
scripts/tests/e2e/: __init__.py  test_complete_trading_workflow.py  test_frontend_backend_integration.py  test_live_trading_simulation.py  test_observability_stack.py
scripts/tests/integration/: __init__.py  test_backtest_workflow.py  test_cpp_python_bridge.py  test_database_integration.py  test_market_data_integration.py
scripts/tests/unit/: __init__.py  test_backtest_use_case.py  test_market_data_service.py  test_strategy_service.py
src/cpp/analytics/: metrics_calculator.h  performance_analyzer.h  performance_metrics.h  risk_metrics.h
src/cpp/core/: backtest_engine.h  disruptor_queue.h  event_types.h  exporter.cpp  high_resolution_clock.cpp  high_resolution_clock.h  latency_tracker.h
src/cpp/data/: data_validator.cpp  database_manager.h  market_data_handler.cpp  market_data_handler.h
src/cpp/execution/: execution_simulator.cpp  lock_free_order_book.h
src/cpp/optimization/: grid_search.cpp  strategy_optimizer.cpp
src/cpp/position/: position.h  position_manager.cpp  risk_manager.h
src/cpp/strategies/: macd_strategy.cpp  rsi_strategy.cpp  sma_strategy.h  technical_indicators.h
tests/cpp/: test_multi_asset_integration.cpp  test_optimizer.cpp  test_performance_stress.cpp  test_sma_strategy.cpp
